--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -202,6 +202,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="8dp"
+                        android:onClick="onMyAccountActivity"
                         android:background="@drawable/button_background"
                         android:contentDescription="@string/my_account"
                         android:scaleType="fitCenter"
