--- a/app/src/main/res/layout/dailydiary_radio_btn.xml
+++ b/app/src/main/res/layout/dailydiary_radio_btn.xml
@@ -73,9 +73,10 @@
 
         </TableLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
-            android:layout_height="534dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -311,7 +312,7 @@
                 </RadioGroup>
 
             </LinearLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
