--- a/app/src/main/res/layout/dailydiary_spinner.xml
+++ b/app/src/main/res/layout/dailydiary_spinner.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/linear"
         android:background="#ff123456"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
@@ -72,6 +73,7 @@
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/table"
             android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
@@ -94,6 +96,7 @@
                     android:layout_weight="1"
                     android:entries="@array/moods"
                     android:gravity="left"
+                    android:visibility="visible"
                     android:spinnerMode="dropdown"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </TableRow>
